--- a/app/src/main/res/layout/fragment_template.xml
+++ b/app/src/main/res/layout/fragment_template.xml
@@ -14,18 +14,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="@dimen/tool_lmargin"
         android:layout_marginBottom="@dimen/tool_xlmargin"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-
         >
 
     </androidx.appcompat.widget.AppCompatImageView>
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/fragment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,7 +35,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/fragment_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/tool_smargin"
+        android:fontFamily="@font/raleway"
+        android:text="Sign In"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toStartOf="@id/fragment_slash"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        android:visibility="invisible"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/fragment_slash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/tool_smargin"
+        android:fontFamily="@font/raleway"
+        android:text="|"
+        android:textSize="22sp"
+        app:layout_constraintStart_toEndOf="@id/fragment_login"
+        app:layout_constraintEnd_toStartOf="@id/fragment_register"
+        app:layout_constraintTop_toBottomOf="@id/img"
+        android:layout_margin="@dimen/tool_smargin"
+        android:visibility="invisible"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/fragment_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/tool_smargin"
+        android:fontFamily="@font/raleway"
+        android:text="Sign Up"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/fragment_slash"
+        app:layout_constraintTop_toBottomOf="@id/img"
+        android:visibility="invisible"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/fragment_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,12 +84,11 @@
         android:fontFamily="@font/raleway"
         android:text="@string/title"
         android:textSize="16sp"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_title" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/fragment_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
