--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/AppThemeLogin">
+    tools:context=".activity.RegisterActivity">
+
 
     <include
         android:id="@+id/toolbar"
@@ -27,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/please_login"
+            android:text="@string/please_sign_up"
             android:textColor="@color/skip"
             android:textSize="22sp"
             android:id="@+id/textView_login"
@@ -41,12 +43,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/email"
-            android:id="@+id/textView_username"
-            android:layout_marginTop="66dp"
+            android:text="@string/username"
+            android:id="@+id/textView_name"
+            android:layout_marginTop="@dimen/tool_mmargin"
             android:textSize="18sp"
             android:textColor="@color/text"
             app:layout_constraintTop_toBottomOf="@id/textView_login"
+            app:layout_constraintStart_toStartOf="@id/textView_login"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/email"
+            android:id="@+id/textView_username"
+            android:layout_marginTop="@dimen/tool_mmargin"
+            android:textSize="18sp"
+            android:textColor="@color/text"
+            app:layout_constraintTop_toBottomOf="@id/textView_name"
             app:layout_constraintStart_toStartOf="@id/textView_login"/>
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -60,6 +74,23 @@
             android:textColor="@color/text"
             app:layout_constraintTop_toBottomOf="@id/textView_username"
             app:layout_constraintStart_toStartOf="@id/textView_login"/>
+
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:textSize="18sp"
+            android:id="@+id/editText_username"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView_name"
+            app:layout_constraintBottom_toBottomOf="@id/textView_name"
+            android:autofillHints="Email"
+            android:hint="@string/name"
+            android:layout_marginEnd="@dimen/tool_mmargin"
+            android:singleLine="true"
+            />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:layout_width="wrap_content"
@@ -100,8 +131,8 @@
             style="@style/Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:id="@+id/button_login"
+            android:text="@string/sign_up"
+            android:id="@+id/button_reg"
             app:layout_constraintTop_toBottomOf="@id/textView_password"
             app:layout_constraintStart_toStartOf="@id/textView_login"
             android:layout_marginTop="@dimen/tool_mmargin"
@@ -110,6 +141,5 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
