--- a/app/src/main/res/layout/fragment_template.xml
+++ b/app/src/main/res/layout/fragment_template.xml
@@ -47,7 +47,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img"
         app:layout_constraintHorizontal_chainStyle="packed"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?android:attr/selectableItemBackground"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/fragment_slash"
@@ -74,7 +77,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/fragment_slash"
         app:layout_constraintTop_toBottomOf="@id/img"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?android:attr/selectableItemBackground"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/fragment_text"
