--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,9 +10,17 @@
 
     <item
         android:id="@+id/action_item_filter"
-        android:title="Search"
-        android:orderInCategory="1"
+        android:title="Filter"
+        android:orderInCategory="2"
         android:icon="@drawable/ic_filter"
         app:showAsAction="always"
         />
+
+    <item
+        android:id="@+id/action_item_logout"
+        android:orderInCategory="3"
+        android:icon="@drawable/ic_logout"
+        app:showAsAction="always"
+        android:title="Logout"
+        android:visible="false"/>
 </menu>
